--- a/DOWTank/Views/Admin/Equipment.cshtml
+++ b/DOWTank/Views/Admin/Equipment.cshtml
@@ -211,7 +211,7 @@
         <div class="form-group">
             <div class="row">
                 <div class="col-md-4">
-                    <label>Tank Capacity:</label>
+                    <label>Tank Capacity (Liters):</label>
                     <input type="text" name="TankCapacity" class="form-control" />
                 </div>
             </div>
