--- a/DOWTank/Views/TankHistory/Index.cshtml
+++ b/DOWTank/Views/TankHistory/Index.cshtml
@@ -379,7 +379,7 @@
                 method: 'POST',
                 data: { onHireHistoryID: id },
                 success: function (response) {
-                    if (response && response.length > 0) {
+                    if (response) {
                         location.reload();
                     }
                 }
