Facility Selection :											Question Asked                 This feature is found under the locationselection.aspx page. It lets you select a facility which is saved with your session. Some search results are filtered with this selection.

--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -122,6 +122,24 @@
         $(function () {
             $('.dropdown.open .dropdown-toggle').dropdown('toggle');
         });
+        $(function () {
+         
+            $("#SecurityLocations").change(function() {
+                console.log($(this).val());
+                $.ajax({
+                    url: "/Home/UpdateUserLocation",
+                    dataType: 'json',
+                    method: 'POST',
+                    data: { locationId: $(this).val() },
+                    success: function (response) {
+                        if (response) {
+                            location.reload();
+                        }
+                    }
+                });
+
+            });
+        });
     </script>
 </body>
 </html>
